--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div class="time-display">
           <span class="minutes">00</span>
           <span>:</span>
-          <span class="seconds">01</span>
+          <span class="seconds">00</span>
         </div>
 
         <div class="controls">
@@ -97,7 +97,7 @@
             </svg>
           </button>
 
-          <button class="stop blink">
+          <button class="stop">
             <svg
               width="48"
               height="48"
@@ -210,6 +210,7 @@
         </button>
       </div>
     </main>
+    
     <div class="alarm">
       <button>
         <svg
@@ -241,7 +242,7 @@
           viewBox="6 6 52 52"
           fill="none"
           xmlns="http://www.w3.org/2000/svg"
-          class="alarm-icon"
+          class="alarm-icon "
         >
           <path
             fill-rule="evenodd"
